--- a/src/app/courses-card-list/courses-card-list.component.html
+++ b/src/app/courses-card-list/courses-card-list.component.html
@@ -1,1 +1,22 @@
+<mat-card class="course-card" *ngFor="let course of courses">
 
+    <mat-calendar-header>
+        <mat-card-title>{{course.description}}</mat-card-title>
+    </mat-calendar-header>
+
+    <img mat-card-image [src]="course.iconUrl">
+
+    <mat-card-content>
+        <p>{{course.longDescription}}</p>
+    </mat-card-content>
+
+    <mat-card-actions class="course-actions">
+        <button mat-raised-button [color]="primary" [routerLink]="['courses', course.id]">
+          VIEW COURSE
+        </button>
+        
+        <button mat-raised-button [color]="accent" (click)="editCourse(course)">
+            EDIT COURSE
+        </button>
+    </mat-card-actions>
+</mat-card>
