--- a/src/app/courses-card-list/courses-card-list.component.html
+++ b/src/app/courses-card-list/courses-card-list.component.html
@@ -11,11 +11,11 @@
     </mat-card-content>
 
     <mat-card-actions class="course-actions">
-        <button mat-raised-button [color]="primary" [routerLink]="['courses', course.id]">
+        <button mat-raised-button color="primary" [routerLink]="['courses', course.id]">
           VIEW COURSE
         </button>
         
-        <button mat-raised-button [color]="accent" (click)="editCourse(course)">
+        <button mat-raised-button color="accent" (click)="editCourse(course)">
             EDIT COURSE
         </button>
     </mat-card-actions>
