--- a/src/app/create-course/create-course-step-1/create-course-step-1.component.html
+++ b/src/app/create-course/create-course-step-1/create-course-step-1.component.html
@@ -1,7 +1,25 @@
 <div [formGroup]="form" class="course-details-form">
 
+    <mat-form-field floatLabel="always">
+        <input matInput placeholder="Course title" formControlName="title" #title>        
+
+        <mat-hint align="end">
+            {{title.value.length}} / 60
+        </mat-hint>
+
+        <mat-error *ngIf="courseTitle.errors?.minlength">
+            A minimum lengrh of 5 characters is required
+        </mat-error>
+    </mat-form-field>
+
+    <mat-form-field appearance="fill">
+        <input matInput placeholder="Course title" formControlName="title">
+        <span matPrefix>+32</span>
+        <span matSuffix>.00</span>
+    </mat-form-field>
+
+    <mat-form-field appearance="outline">
+        <input matInput placeholder="Course title" formControlName="title">
+    </mat-form-field>
 
 </div>
-
-
-
