--- a/src/app/courses-card-list/courses-card-list.component.html
+++ b/src/app/courses-card-list/courses-card-list.component.html
@@ -1,8 +1,8 @@
 <mat-card class="course-card" *ngFor="let course of courses">
 
-    <mat-calendar-header>
+    <mat-card-header>
         <mat-card-title>{{course.description}}</mat-card-title>
-    </mat-calendar-header>
+    </mat-card-header>
 
     <img mat-card-image [src]="course.iconUrl">
 
@@ -11,11 +11,12 @@
     </mat-card-content>
 
     <mat-card-actions class="course-actions">
-        <button mat-raised-button [color]="primary" [routerLink]="['courses', course.id]">
+        <button mat-raised-button color="primary" 
+            [routerLink]="['courses', course.id]">
           VIEW COURSE
         </button>
         
-        <button mat-raised-button [color]="accent" (click)="editCourse(course)">
+        <button mat-raised-button color="accent" (click)="editCourse(course)">
             EDIT COURSE
         </button>
     </mat-card-actions>
