--- a/src/app/course/course.component.html
+++ b/src/app/course/course.component.html
@@ -8,11 +8,12 @@
     <mat-spinner></mat-spinner>
   </div>
 
-  <table mat-table class="lessons-table mat-elevation-z8" [dataSource]="lessons">
+  <table mat-table class="lessons-table mat-elevation-z8" matSort matSortDisableClear matSortActive="seqNo"
+    matSortDirection="asc" [dataSource]="lessons" multiTemplateDataRows>
 
     <ng-container matColumnDef="seqNo">
 
-      <th mat-header-cell *matHeaderCellDef>#</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>#</th>
 
       <td mat-cell *matCellDef="let lesson">{{lesson.seqNo}}</td>
 
@@ -20,7 +21,7 @@
 
     <ng-container matColumnDef="description">
 
-      <th mat-header-cell *matHeaderCellDef>Description</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Description</th>
 
       <td mat-cell *matCellDef="let lesson">{{lesson.description}}</td>
 
@@ -34,9 +35,18 @@
 
     </ng-container>
 
+    <ng-container matColumnDef="expandedDetail">
+
+      <td mat-cell *matCellDef="let lesson" colspan="3">{{lesson.longDescription}}</td>
+
+    </ng-container>
+
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
 
-    <tr mat-row *matRowDef="let lesson; columns:displayedColumns"></tr>
+    <tr mat-row (click)="onToggleLesson(lesson)" *matRowDef="let lesson; columns:displayedColumns"></tr>
+
+    <tr mat-row *matRowDef="let lesson; columns:['expandedDetail']" [class.collapsed-detail]="lesson != expandedLesson">
+    </tr>
 
   </table>
   <mat-paginator class="mat-elevation-z8" [length]="course?.lessonsCount" [pageSize]="3" [pageSizeOptions]="[3, 5, 10]">
