--- a/src/app/course/course.component.html
+++ b/src/app/course/course.component.html
@@ -8,47 +8,69 @@
     <mat-spinner></mat-spinner>
   </div>
 
-  <table mat-table class="lessons-table mat-elevation-z8" matSort matSortDisableClear matSortActive="seqNo"
-    matSortDirection="asc" [dataSource]="lessons" multiTemplateDataRows>
+  <div class="scrolling-container">
 
-    <ng-container matColumnDef="seqNo">
+    <table mat-table class="lessons-table mat-elevation-z8" matSort matSortDisableClear matSortActive="seqNo"
+      matSortDirection="asc" [dataSource]="lessons" multiTemplateDataRows>
 
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>#</th>
+      <ng-container matColumnDef="select" (click)="$event.stopPropagation()" sticky>
 
-      <td mat-cell *matCellDef="let lesson">{{lesson.seqNo}}</td>
+        <th mat-header-cell *matHeaderCellDef>
+          <mat-checkbox [checked]="selection.hasValue() && isAllSelected()" (change)="toggleAll()"
+            [indeterminate]="selection.hasValue() && !isAllSelected()">
 
-    </ng-container>
+          </mat-checkbox>
+        </th>
 
-    <ng-container matColumnDef="description">
+        <td mat-cell *matCellDef="let lesson">
+          <mat-checkbox (change)="onLessonToggled(lesson)" [checked]="selection.isSelected(lesson)">
 
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Description</th>
+          </mat-checkbox>
+        </td>
+      </ng-container>
 
-      <td mat-cell *matCellDef="let lesson">{{lesson.description}}</td>
+      <ng-container matColumnDef="seqNo" sticky>
 
-    </ng-container>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>#</th>
 
-    <ng-container matColumnDef="duration">
+        <td mat-cell *matCellDef="let lesson">{{lesson.seqNo}}</td>
 
-      <th class="duration-cell" mat-header-cell *matHeaderCellDef>Duration</th>
+      </ng-container>
 
-      <td class="duration-cell" mat-cell *matCellDef="let lesson">{{lesson.duration}}</td>
+      <ng-container matColumnDef="description">
 
-    </ng-container>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Description</th>
 
-    <ng-container matColumnDef="expandedDetail">
+        <td mat-cell *matCellDef="let lesson">{{lesson.description}}</td>
 
-      <td mat-cell *matCellDef="let lesson" colspan="3">{{lesson.longDescription}}</td>
+      </ng-container>
 
-    </ng-container>
+      <ng-container matColumnDef="duration">
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <th class="duration-cell" mat-header-cell *matHeaderCellDef>Duration</th>
 
-    <tr mat-row (click)="onToggleLesson(lesson)" *matRowDef="let lesson; columns:displayedColumns"></tr>
+        <td class="duration-cell" mat-cell *matCellDef="let lesson">{{lesson.duration}}</td>
 
-    <tr mat-row *matRowDef="let lesson; columns:['expandedDetail']" [class.collapsed-detail]="lesson != expandedLesson">
-    </tr>
+      </ng-container>
 
-  </table>
+      <ng-container matColumnDef="expandedDetail">
+
+        <td mat-cell *matCellDef="let lesson" colspan="4">{{lesson.longDescription}}</td>
+
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky:true"></tr>
+
+      <tr mat-row (click)="onToggleLesson(lesson)" *matRowDef="let lesson; columns:displayedColumns"></tr>
+
+      <tr mat-row *matRowDef="let lesson; columns:['expandedDetail']"
+        [class.collapsed-detail]="lesson != expandedLesson">
+      </tr>
+
+    </table>
+
+  </div>
+
   <mat-paginator class="mat-elevation-z8" [length]="course?.lessonsCount" [pageSize]="3" [pageSizeOptions]="[3, 5, 10]">
 
   </mat-paginator>
