--- a/src/app/courses-card-list/courses-card-list.component.html
+++ b/src/app/courses-card-list/courses-card-list.component.html
@@ -1,4 +1,4 @@
-<mat-grid-list [cols]="3" [rowHeight]="'500px'">
+<mat-grid-list [cols]="cols" [rowHeight]="rowHeigth">
 
     <mat-grid-tile *ngFor="let course of courses">
         <mat-card class="course-card mat-elevation-z7">
