--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,10 @@
 
 @import "@angular/material/prebuilt-themes/indigo-pink.css";
 
+@import "./mixins";
+
+@include responsive-dialogs();
+
 .highligth-date {
     background: red;
 }
