--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,7 +3,7 @@
 
 @import "@angular/material/prebuilt-themes/indigo-pink.css";
 
-@import "./mixins";
+/*@import "./mixins";*/
 
 @include responsive-dialogs();
 
